fix: fix hover submit button shifting form

--- a/src/pages/CreateReview.css
+++ b/src/pages/CreateReview.css
@@ -89,7 +89,7 @@
 
 .submit-button:hover {
     background-color: var(--accent-color);
-    border: 1px black;
+    border: 1px solid black;
     transform: scale(1.05);
     align-self: center;
     color: white;
